2009-06-29  Olivier Stasse  <olivier.stasse@aist.go.jp>

	All ODEBUG macros are now in Debug.h....
	* src/Debug.h: Long overdue - All Macros are here now. New.

2009-06-29  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Adding access through MAL_S4x4_ACCESS_I_J.
	* unitTesting/ComputeRealZMP.cpp: .

2009-06-29  Olivier Stasse  <olivier.stasse@aist.go.jp>

	T3D compatibility for ComputeZMP.cpp.
	* unitTesting/ComputeRealZMP.cpp: .

2009-06-29  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Removed local inverse matrix.
	* unitTesting/ComputeRealZMP.cpp: No the problem was not coming
	from the inverse matrix in jrlMathTools for small matrix.

2009-06-29  Olivier Stasse  <olivier.stasse@aist.go.jp>

	T3D compatibility with samples.
	* unitTesting/ComputeRealZMP.cpp: Put back local MAL compatibility.

2009-06-29  Olivier Stasse  <olivier.stasse@aist.go.jp>

	dynamics-config.h generated now in ./src.
	* CMakeLists.txt: Corrected the target directory
	for dynamics-config.h.

2009-06-29  Olivier Stasse  <olivier.stasse@aist.go.jp>

	Adding header dynamicsJRLJapan.h.
	* Adding file removed from previous commit
	preventing correct compilation.
	* include/dynamicsJRLJapan/dynamicsJRLJapanFactory.h: New.

2009-06-28  Olivier Stasse  <olivier.stasse@aist.go.jp>

	First working commit with the new abstract interface.
	* This version is compatible with 
	commit 3b65ab81576a0e7398afb095644d801ef997d6bc
	of abstractRobotDynamics.
	* DynamicMultiBody.cpp has ballooned into a
	huge file. Thus it has been splitted in a more
	meaningful organization.
	* A class to handle the new object Foot has been
	added.
	* VRMLID has been replaced by ActuatedID.
	
	* src/CMakeLists.txt: Adding Foot.
	* src/DynamicMultiBody.cpp: Split into several files and
	added actuated joints support.
	* src/DynamicMultiBody.h: Adding actuated joint support.
	* src/DynamicMultiBodyActuated.cpp: New.
	* src/DynamicMultiBodyAngularMomentum.cpp: New.
	* src/DynamicMultiBodyArticularJacobian.cpp: New.