@@ -13,28 +13,10 @@
 
 */
 
+#include "Debug.h"
+
 #include "HumanoidSpecificities.h"
 
-#define ODEBUG2(x)
-#define ODEBUG3(x) cerr << "HumanoidSpecificities :" << x << endl
-#define RESETDEBUG5(y) { ofstream DebugFile; DebugFile.open(y,ofstream::out); DebugFile.close();}
-#define ODEBUG5(x,y) { ofstream DebugFile; DebugFile.open(y,ofstream::app); DebugFile << "PGI: " << x << endl; DebugFile.close();}
-#if 0
-#define ODEBUG(x) cerr << "HumanoidsSpecificities :" <<  x << endl
-#else
-#define ODEBUG(x) 
-#endif
-
-#if 0
-#define RESETDEBUG4(y) { ofstream DebugFile; DebugFile.open(y,ofstream::out); DebugFile.close();}
-#define ODEBUG4(x,y) { ofstream DebugFile; DebugFile.open(y,ofstream::app); DebugFile << "PGI: " << x << endl; DebugFile.close();}
-#define _DEBUG_4_ACTIVATED_ 1 
-#else
-#define RESETDEBUG4(y) 
-#define ODEBUG4(x,y)
-#endif
-
-#define ODEBUG6(x,y)
 
 using namespace dynamicsJRLJapan;
 
