@@ -22,22 +22,7 @@
 #define DEPTH_MAX 30
 #include <map>
 
-#define ODEBUG2(x)
-#define ODEBUG3(x) cerr << "SpiritVRML :" << x << endl
-
-#if 0
-#define ODEBUG(x) cerr << "SpiritVRML :" <<  x << endl
-#else
-#define ODEBUG(x) 
-#endif
-
-#if 0
-
-#define ODEBUG4(x,y) { ofstream DebugFile; DebugFile.open(y,ofstream::app); DebugFile << "WalkGenJRLIntegrate: " << x << endl; DebugFile.close();}
-#define _DEBUG_4_ACTIVATED_ 1 
-#else
-#define ODEBUG4(x,y)
-#endif
+#include "Debug.h"
 
 #if 0
 #include <boost/spirit.hpp>
